Added js and other files

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarTop">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link bold bronze shadows" href="teams.html">Search</a>
+        <a class="nav-link bold bronze shadows" href="users/register">Register</a>
       </li>
       <li class="nav-item">
         <a class="nav-link bold bronze shadows" href="users/login">Login</a>
