--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -7,7 +7,7 @@
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-<link rel="stylesheet" type="text/css" href="stylesheets/site.css" />
-<link rel="stylesheet" type="text/css" href="stylesheets/{{sheet}}.css" />
-<link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg"/>
-<title>Iron Chef Tournament</title>
+<link rel="stylesheet" type="text/css" href="/stylesheets/site.css" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/{{sheet}}.css" />
+<link rel="shortcut icon" type="image/jpg" href="/images/favicon.jpg"/>
+<title>Iron Chef Tournament</title> 
