--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-  <a class="navbar-brand obli bronze shadows" href="index.html">Iron Chef</a>
+  <a class="navbar-brand obli bronze shadows" href="/">Iron Chef</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop" aria-controls="navbarTop" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -8,10 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarTop">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link bold bronze shadows" href="teams.html">Search</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link bold bronze shadows" href="login.html">Login</a>
+        <a class="nav-link bold bronze shadows" href="login">Login</a>
       </li>
     </ul>
   </div>
@@ -21,29 +18,31 @@
   <!-- <div id="chefBanner"><div> -->
   <div class="container">
     <h1 class="mt-5 obli bronze shadows text-center">Register</h1>
-    <form class="row justify-content-center white" id="signinForm">
+    <form class="row justify-content-center white" id="registerForm">
       <div class="col-md-4">
-          <div class="form-group">
-            <label for="inputUsername">User Name</label>
-            <input type="text" id="inputUsername" class="form-control" placeholder="User Name" required autofocus autocomplete="username">
-          </div>
 
-          <div class="form-group">        
-            <label for="inputPassword">Password</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required autocomplete="current-password">
-          </div>
+        <div class="form-group">
+          <label for="inputUsername">User Name</label>
+          <input type="text" id="inputUsername" class="form-control" placeholder="User Name" required autofocus autocomplete="username">
+        </div>
 
-          <div class="form-group">
-            <label for="inputEmail">Confirm Password</label>
-            <input type="password" id="confirmPassword" class="form-control" placeholder="Confirm Password" required autofocus autocomplete="new-password">
-          </div>
+        <div class="form-group">
+          <label for="inputEmail">Email address</label>
+          <input type="text" id="inputEmail" class="form-control" placeholder="Email address" required autofocus autocomplete="username email">
+        </div>
 
-          <div class="form-group">
-            <label for="inputEmail">Email address</label>
-            <input type="text" id="inputEmail" class="form-control" placeholder="Email address" required autofocus autocomplete="username email">
-          </div>
-          
-          <button class="btn btn-lg btn-success btn-block" type="submit">Register</button>
+        <div class="form-group">        
+          <label for="inputPassword">Password</label>
+          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required autocomplete="current-password">
+        </div>
+
+        <div class="form-group">
+          <label for="inputEmail">Confirm Password</label>
+          <input type="password" id="confirmPassword" class="form-control" placeholder="Confirm Password" required autofocus autocomplete="new-password">
+          <small id="passMsg"></small>
+        </div>
+        
+        <button class="btn btn-lg btn-success btn-block" type="submit">Register</button>
       </div>
     </form>
   </div>
