--- a/views/teams.hbs
+++ b/views/teams.hbs
@@ -12,9 +12,9 @@
         
         <a class="nav-link dropdown-toggle shadows bold" href="#" role="button" data-toggle="dropdown"><img class="rounded" src="images/robicon.png"> My Profile</a>
         <div class="dropdown-menu dropdown-menu-right">
-          <a class="dropdown-item" href="#">Edit Profile</a>
+          <a class="dropdown-item" href="/settings">Edit Profile</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/">Logout</a>
+          <a class="dropdown-item" href="/users/logout">Logout</a>
         </div>
       </li>
     </ul>
